// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon has defaults 1`] = `
<svg
  className="icon-base"
>
  <use
    xlinkHref="#foobar"
  />
</svg>
`;

exports[`Icon has title 1`] = `
<svg
  className="icon-base"
>
  <title>
    yo
  </title>
  <use
    xlinkHref="#foobar"
  />
</svg>
`;
